without proper prompt and then fix as much as it asks for it.