@@ -1,18 +1,16 @@
 package com.salesmanager.shop.controller;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
 
 import jakarta.annotation.PostConstruct;
-import jakarta.inject.Inject;
 import jakarta.servlet.http.HttpServletRequest;
 
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Controller;
-import org.springframework.util.ResourceUtils;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseBody;
@@ -33,27 +31,22 @@ import com.salesmanager.core.model.content.OutputContentFile;
 public class ImagesController {
 	
 	private static final Logger LOGGER = LoggerFactory.getLogger(ImagesController.class);
+	private static final String NOT_FOUND_IMAGE_PATH = "static/not-found.png";
 	
-
-	
-	@Inject
-	private ContentService contentService;
-	
-	@Inject
-	private ProductImageService productImageService;
+	private final ContentService contentService;
+	private final ProductImageService productImageService;
 	
 	private byte[] tempImage = null;
+
+	public ImagesController(ContentService contentService, ProductImageService productImageService) {
+		this.contentService = contentService;
+		this.productImageService = productImageService;
+	}
 	
 	@PostConstruct
 	public void init() {
-		try {
-			File file = ResourceUtils.getFile("classpath:static/not-found.png");
-			if(file != null) {
-				byte[] bFile = Files.readAllBytes(file.toPath());
-				this.tempImage = bFile;
-			}
-
-			
+		try (InputStream inputStream = new ClassPathResource(NOT_FOUND_IMAGE_PATH).getInputStream()) {
+			this.tempImage = inputStream.readAllBytes();
 		} catch (Exception e) {
 			LOGGER.error("Can't load temporary default image", e);
 		}
